Home-Projects/k8s-dev/projects/nginx-testpage/testpage-service.yml
apiVersion: v1
kind: Service
metadata:
  name: testpage-svc
  namespace: testpage
spec:
  selector:
    app: testpage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
